--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Dev-Needs</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active">Home</li>
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
