--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Dev-Needs</a>
+<div class="main-screen">
+  <div class="dev-menu-cont">
+    <div class="dev-menu text-center pt-4">
+      Dev Needs
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active">Home</li>
-    </ul>
   </div>
-</nav>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
+
+
