--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  height: 100%;
+}
+body {
+  min-height: 100vh;
+}
+.main-screen {
+  min-height: 100vh;
+  background: url("./assets/images/bg.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 50% 50%;
+  background-color: rgb(69, 102, 41);
+  opacity: 0.9;
+  -moz-box-shadow: inset 10px 10px 50px rgb(94, 104, 56);
+  -webkit-box-shadow: inset 10px 10px 50px  rgb(94, 104, 56);
+  box-shadow: inset 10px 10px 50px  rgb(94, 104, 56);
+}
+.navbar {
+  color: #ffffff;
+}
+.dev-menu-cont {
+  height: 100px;
+  width: 100%;
+}
+.dev-menu {
+  width: 200px;
+  height: 100px;
+  background-color: rgb(164, 207, 46);
+  margin: auto;
+  border-radius: 0px 0px 100px 100px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #501a86;
+  font-family: cursive;
+  border-left: 10px solid #b5bd3a;
+  border-right: 10px solid #b5bd3a;
+  border-bottom: 10px solid #b5bd3a;
+}
+@media screen and (max-device-width: 1024px) and (orientation: portrait){
+  /* styles for narrow screens */
+  .main-screen {
+    background-image: none;
+  }
+  .dev-menu {
+
+  }
+}
