--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,16 @@
-<div class="main-screen">
-  <div class="dev-menu-cont">
-    <div class="dev-menu text-center pt-4">
-      Dev Needs
+<div class="main-screen container-fluid">
+  <div class="dev-menu-cont row">
+    <div class="col-2 p-4">
+      <div class="logo">
+        <img src="{{imgSrc}}" width=100 />
+      </div>
     </div>
+    <div class="col-10 ">
+      <div class="dev-menu text-center pt-4">
+        {{title}}
+      </div>
+    </div>
+
   </div>
   <router-outlet></router-outlet>
 </div>
