--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,11 @@
 .home-text {
-  color: #ffffff;
+  color: #a8ead2;
+  opacity: 0.8;
+  background: #1f1616;
+  border-radius: 5px;
+  border: 2px solid #dbe54ade;
+  margin-top: 50px;
+}
+.bg-cust {
+  background-color: #659740;
 }
