--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,8 @@ body {
   background-color: rgb(69, 102, 41);
   opacity: 0.9;
   -moz-box-shadow: inset 10px 10px 50px rgb(94, 104, 56);
-  -webkit-box-shadow: inset 10px 10px 50px  rgb(94, 104, 56);
-  box-shadow: inset 10px 10px 50px  rgb(94, 104, 56);
+  -webkit-box-shadow: inset 10px 10px 50px rgb(94, 104, 56);
+  box-shadow: inset 10px 10px 50px rgb(94, 104, 56);
 }
 .navbar {
   color: #ffffff;
@@ -28,7 +28,7 @@ body {
   width: 200px;
   height: 100px;
   background-color: rgb(164, 207, 46);
-  margin: auto;
+  margin: auto 0 auto 30%;
   border-radius: 0px 0px 100px 100px;
   font-size: 18px;
   font-weight: bold;
@@ -38,12 +38,23 @@ body {
   border-right: 10px solid #b5bd3a;
   border-bottom: 10px solid #b5bd3a;
 }
-@media screen and (max-device-width: 1024px) and (orientation: portrait){
+@media screen and (max-device-width: 1024px) and (orientation: portrait) {
   /* styles for narrow screens */
   .main-screen {
     background-image: none;
   }
   .dev-menu {
-
   }
+}
+.logo {
+  width: 100px;
+  height: 100px;
+  background: #fff;
+  border-radius: 50px;
+  padding-top: 20px;
+  box-shadow: 0 0 0 10px #659740;
+}
+.card-body {
+  background-color: #ffffff;
+  color: #696767;
 }
