--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,42 +1,64 @@
 <section class="container home-text">
-  <h2>Happy Coding !!</h2>
-  <p>This website is intended for UI developers to provide useful utilities that are used in day to day coding.</p>
+  <div class="row">
+
+    <div class="col-2">
+      <div class="logo">
+        <img src="{{imgSrc}}" width=100 />
+      </div>
+    </div>
+    <div class="col">
+      <h3>Happy Coding !!</h3>
+      <p>
+        This website is intended for UI developers to provide useful utilities
+        that are used in day to day coding.
+      </p>
+    </div>
+  </div>
 </section>
 <section class="mt-5 container-fluid">
   <div class="row">
     <div class="col">
-      <div class="card text-white bg-cust mb-3" >
+      <div class="card text-white bg-cust mb-3">
         <div class="card-header">Javascript</div>
         <div class="card-body">
           <h5 class="card-title">Useful Utilities</h5>
-          <p class="card-text" >Please click here to view topics and examples </p>
+          <p class="card-text">Please click here to view topics and examples</p>
         </div>
       </div>
     </div>
     <div class="col">
-      <div class="card text-white bg-cust mb-3" >
+      <div class="card text-white bg-cust mb-3">
         <div class="card-header">Header</div>
         <div class="card-body">
           <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
         </div>
       </div>
     </div>
     <div class="col">
-      <div class="card text-white bg-cust mb-3" >
+      <div class="card text-white bg-cust mb-3">
         <div class="card-header">Header</div>
         <div class="card-body">
           <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
         </div>
       </div>
     </div>
     <div class="col">
-      <div class="card text-white bg-cust mb-3" >
+      <div class="card text-white bg-cust mb-3">
         <div class="card-header">Header</div>
         <div class="card-body">
           <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
         </div>
       </div>
     </div>
