--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,11 @@
 .home-text {
-  color: #a8ead2;
+  color: #167955;
   opacity: 0.8;
-  background: #1f1616;
+  background: #fbfbfb;
   border-radius: 5px;
-  border: 2px solid #dbe54ade;
+  border: 2px solid #bbc161de;
   margin-top: 50px;
+  padding: 20px;
 }
 .bg-cust {
   background-color: #659740;
