--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .home-text {
-  color: #167955;
-  opacity: 0.8;
-  background: #fbfbfb;
+  color: #dfefe9;
+  opacity: 0.9;
+  background: #6f6c6c;
   border-radius: 5px;
   border: 2px solid #bbc161de;
   margin-top: 50px;
