--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         <div class="card-header">Javascript</div>
         <div class="card-body">
           <h5 class="card-title">Useful Utilities</h5>
-          <p class="card-text">Please click here to view topics and examples</p>
+          <p class="card-text cursor txt-highlight" (click)="gotoJSUtility()">Please click here to view topics and examples</p>
         </div>
       </div>
     </div>
