--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,15 @@ body {
 .dev-menu span {
   font-size: 32px;
 }
+.cursor {
+  cursor: pointer;
+}
+.txt-highlight:hover {
+  color: #b5bd3a;
+}
+.utility {
+  padding: 20px;
+  color: #696767;
+  background-color: #ffffff;
+  border-left: 10px solid #659740;
+}
